--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,16 @@
-name: Your New Jekyll Site
-kramdown:
-  input: GFM
-markdown: redcarpet
+name: iamkristian
+description: "Ideas and thoughts"
+url: "http://iamkristian.github.io"
 pygments: true
+markdown: redcarpet
+markdown_ext:  markdown,mkd,mkdn,md
+permalink: /blog/:year/:month/:day/:title
+
+redcarpet:
+  extensions: ['no_intra_emphasis',
+               'fenced_code_blocks',
+               'strikethrough',
+               'superscript',
+               'autolink',
+               'with_toc_data',
+               'tables']
