--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ markdown: redcarpet
 pygments: true
 markdown_ext:  markdown,mkd,mkdn,md
 permalink: /blog/:year/:month/:day/:title
+paginate: 3
+paginate_path: "blog/page/:num"
 
 exclude: ['scripts','scss', 'README.md', 'CNAME', 'Gemfile', 'Gemfile.lock', '.ruby-version']
 
