--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ name: krx.io
 description: "Ideas and thoughts"
 url: "http://krx.io"
 markdown: kramdown
+theme: minima
 highlighter: rouge
 markdown_ext:  markdown,mkd,mkdn,md
 permalink: /blog/:year/:month/:day/:title
