--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,10 @@ paginate_path: "blog/page/:num"
 
 exclude: ['scripts','scss', 'README.md', 'CNAME', 'Gemfile', 'Gemfile.lock', '.ruby-version']
 
+site:
+  pages:
+    about:
+
 kramdown:
   input: GFM
   auto_ids: true
