--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,13 @@ plugins:
 markdown: kramdown
 highlighter: rouge
 permalink: /blog/:year/:month/:day/:title
+pagination:
+  enabled: true
+  collection: 'posts'
+  per_page: 9
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
 
 header_pages:
   - index.md
@@ -48,6 +55,7 @@ kramdown:
   auto_ids: true
   footnote_nr: 1
   entity_output: as_char
+  syntax_highlighter: rouge
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
