--- a/_config.yml
+++ b/_config.yml
@@ -33,20 +33,24 @@ theme: minima
 
 plugins:
  - jekyll-feed
- - jekyll-seo-tag
 
 markdown: kramdown
 highlighter: rouge
-permalink: /blog/:year/:month/:day/:title
+#permalink: /blog/:year/:month/:day/:title
+#paginate: 9
+#paginate_path: "/blog/page:num"
+
 pagination:
   enabled: true
   collection: 'posts'
   per_page: 9
+  permalink: '/page/:num/'
   limit: 0
   sort_field: 'date'
   sort_reverse: true
 
 header_pages:
+  - blog.md
   - index.md
   - about/index.md
 
