--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,8 @@ author:
   name: Kristian Rasmussen
   email: me@krx.io
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This should contain some nice description of what this is all about.
+  Can't say that I'm entirely sure, except fun, code and thoughts from me.
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
@@ -17,11 +16,11 @@ minima:
 
   # generate social links in footer
   social_links:
-    - { platform: github,         user_url: "https://github.com/jekyll/minima" }
-    - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
-    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
+    - { platform: github,         user_url: "https://github.com/iamkristian" }
+    - { platform: instagram,      user_url: "https://www.instagram.com/iamkristian" }
+    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/iamkristian" }
     - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
-    - { platform: rss,            user_url: "https://www.youtube.com/jekyll" }
+    - { platform: rss,            user_url: "https://iamkristian.github.io/feed.xml" }
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
