adding the right 404 page

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 title: krx.io
 author:
   name: Kristian Rasmussen
-  email: me@krx.io
+  email: me+blog@krx.io
 description: > # this means to ignore newlines until "show_excerpts:"
-  This should contain some nice description of what this is all about.
-  Can't say that I'm entirely sure, except fun, code and thoughts from me.
+ I can't promise any regular updates. I usually write when I'm in the mood or
+ have something exciting to share. Topics range from code - Ruby, Elixir,
+ Javascript, thoughts and what else is on my mind.
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
