--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: krx.io
 author:
   name: Kristian Rasmussen
-  email: me+blog@krx.io
+  email: me plus blog at krx dot io
 description: > # this means to ignore newlines until "show_excerpts:"
   I can promise absolute irregular updates. I usually write when
   I'm in the mood or have something exciting to share. Topics range
